Traefik/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "https"
    traefik.ingress.kubernetes.io/pass-tls-cert: "true"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
spec:
  tls:
  - hosts:
    - sample-web.companyname.com
    secretName: secure.companyname.com
  rules:
    - host: sample-web.companyname.com
      http:
        paths:
        - path: /
          backend:
            serviceName: web-service
            servicePort: 80
